# Films-UI-Qt

./: CMakeLists.txt  CMakeLists.txt.user.a267fe8  README.md  README.txt  main.cpp
Films/: Films.cpp  Films.h
db_manager/: db_manager.cpp  db_manager.h
dialog_add/: dialog_add.cpp  dialog_add.h  dialog_add.ui
dialog_change/: dialog_change.cpp  dialog_change.h  dialog_change.ui
dialog_select/: dialog_select.cpp  dialog_select.h  dialog_select.ui
film_manager/: film_manager.cpp  film_manager.h
mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
